--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Install GDebi
+        run: sudo apt-get install -y gdebi-core
+
+      - name: Download the Quarto .deb file
+        run: |
+          curl -LO https://quarto.org/download/latest/quarto-linux-amd64.deb
+
+      - name: Install Quarto
+        run: |
+          sudo gdebi -n quarto-linux-amd64.deb
+
+      - name: Verify Quarto installation
+        run: |
+          quarto check
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v3
@@ -97,21 +112,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Set up Quarto
-        run: |
-          sudo apt-get install quarto 
+      - name: Install GDebi
+        run: sudo apt-get install -y gdebi-core
 
-      - name: Generate documentation from EDA.ipynb to HTML
+      - name: Download the Quarto .deb file
         run: |
-          quarto render EDA.ipynb --to html 
+          curl -LO https://quarto.org/download/latest/quarto-linux-amd64.deb
+
+      - name: Install Quarto
+        run: |
+          sudo gdebi -n quarto-linux-amd64.deb
+
+      - name: Render documentation
+        run: |
+          quarto render EDA.ipynb --to html
           
-      - name: Move documentation to public directory for GitHub Pages 
+      - name: Move documentation to public directory for GitHub Pages (если необходимо)
         run: |
           mkdir -p public && mv EDA.html public/
-
-      - name: Upload documentation as artifact 
-        if : success()
-        uses : actions/upload-artifact@v3 
-        with :
-           name : docs 
-           path : public/
