--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,126 +7,77 @@ on:
     branches: ["main"]
 
 jobs:
-  build_docker_image:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Clear Cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-cache  
-          restore-keys: |
-            ${{ runner.os }}-cache
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Install GDebi
-        run: sudo apt-get install -y gdebi-core
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Download the Quarto .deb file
+      - name: Login to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build and push Docker image
         run: |
-          curl -LO https://quarto.org/download/latest/quarto-linux-amd64.deb
+          docker build -t ghcr.io/kateproxa/mlops_hw1:${{ github.sha }} .
+          docker push ghcr.io/kateproxa/mlops_hw1:${{ github.sha }}
+          docker tag ghcr.io/kateproxa/mlops_hw1:${{ github.sha }} ghcr.io/kateproxa/mlops_hw1:latest
+          docker push ghcr.io/kateproxa/mlops_hw1:latest
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          pip install black
+
+      - name: Format code
+        run: black .
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          pip install flake8
+
+      - name: Lint code
+        run: flake8 .
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Pull and run Docker container
+        run: |
+          docker pull ghcr.io/kateproxa/mlops_hw1:${{ github.sha }}
+          docker run -d -p 80:80 ghcr.io/kateproxa/mlops_hw1:${{ github.sha }}
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Install Quarto
         run: |
-          sudo gdebi -n quarto-linux-amd64.deb
-
-      - name: Verify Quarto installation
-        run: |
-          quarto check
-
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            docker.io/kateproxa/mlops_hw1:${{ github.sha }}
-            docker.io/kateproxa/mlops_hw1:latest
-
-  lint_and_format_code:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Clear Cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-cache
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black[jupyter]
-      - name: Run linter
-        run: flake8 . --exclude=setup.py
-      - name: Check code formatting
-        run: black . --exclude=setup.py
-
-  publish_package:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Clear Cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-cache
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Clean old artifacts
-        run: rm -rf dist/
-      - name: Build package
-        run: |
-          python setup.py sdist bdist_wheel
-      - name: Upload to TestPyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: |
-          twine upload --repository testpypi dist/* --verbose
-      - name: Upload to PyPI
-        if: startsWith(github.event.release.tag_name, 'v')
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          twine upload --repository pypi dist/*
-
-  build_docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Install GDebi
-        run: sudo apt-get install -y gdebi-core
-
-      - name: Download the Quarto .deb file
-        run: |
           curl -LO https://quarto.org/download/latest/quarto-linux-amd64.deb
-
-      - name: Install Quarto
-        run: |
+          sudo apt-get install -y gdebi-core
           sudo gdebi -n quarto-linux-amd64.deb
 
       - name: Render documentation
-        run: |
-          quarto render EDA.ipynb --to html
-          
+        run: quarto render EDA.ipynb --to html
+        
       - name: Move documentation to public directory for GitHub Pages (если необходимо)
         run: |
           mkdir -p public && mv EDA.html public/
