--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: CI/CD Pipeline
 
+permissions:
+  packages: write
+  contents: read
+
 on:
   push:
     branches: ["main"]
@@ -25,6 +29,7 @@ jobs:
 
   format:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -38,6 +43,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    needs: format
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -51,6 +57,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -65,6 +72,7 @@ jobs:
 
   docs:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
