--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -29,7 +30,6 @@ jobs:
 
   format:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -57,7 +57,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -86,6 +86,6 @@ jobs:
       - name: Render documentation
         run: quarto render EDA.ipynb --to html
         
-      - name: Move documentation to public directory for GitHub Pages (если необходимо)
+      - name: Move documentation to public directory for GitHub Pages
         run: |
           mkdir -p public && mv EDA.html public/
